<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="server">https://dwichan.intermediaamikom.org/</string> <!-- must end with / -->

    <string name="app_name">ShoumHome! Ustadz</string>
    <string name="app_version">1.0 (2020)</string>
    <string name="title_activity_main">Beranda</string>

    <string name="tab_article">ARTIKEL</string>
    <string name="tab_kajian">KAJIAN</string>

    <string name="copyright">© 2020. ShoumHome Teams (Kelompok 5).</string>
    <string name="add_post">Tambah Post</string>
    <string name="add_kajian">Tambah Kajian</string>
    <string name="example_kajian_title">Untukmu yang sedang dalam pelukan</string>
    <string name="example_ustadz">Ust. Fendi Riawan, LLC., MA.</string>
    <string name="example_keterangan">LIVE</string>
    <string name="example_tanggal">12 Januari 2020</string>
    <string name="search_kajian">Cari kajian…</string>
    <string name="icon_kajian">icon kajian</string>
    <string name="search_post">Cari artikel…</string>
    <string name="versinya">versinya</string>
    <string name="logo">logo</string>
    <string name="load_data">Mohon menunggu, kami sedang memuat data…</string>
    <string name="example_mosque">Masjid Fatimatuzzahra</string>
    <string name="example_article_title">Hukum memberikan zakat kepada kaum dhuafa secara online</string>
    <string name="example_text">Lorem ipsum dolor sit amet, consectetur adispicing elit. Hapunten salajengna</string>
    <string name="example_likes">1200 suka</string>
    <string name="example_post_date">12 Jan 2020 04:10:15</string>
    <string name="post_date">Post Date</string>
    <string name="likes">suka</string>
    <string name="post_picture">Post Picture</string>
    <string name="edit">Ubah</string>
    <string name="delete">Hapus</string>
    <string name="warning">warning</string>
    <string name="example_error_message">Oops! Error\n\n[404] Not Found</string>
    <string name="refresh">Segarkan</string>
    <string name="read_article">Baca Artikel</string>
    <string name="view_kajian">Lihat Kajian</string>
    <string name="example_id">-1</string>
    <string name="example_address">Jalan Panjang No. 8A Jakarta Pusat 12345</string>
    <string name="by">oleh</string>
    <string name="on_stage">Di Tempat</string>
    <string name="timestamp_announce">Waktu Pengumuman</string>
    <string name="timestamp_due">Waktu Pelaksanaan</string>
    <string name="description">Deskripsi:</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="play_video">Play Video</string>
    <string name="login_as_ustadz">Masuk sebagai Ustadz</string>
    <string name="username">Username</string>
    <string name="show_password">Lihat Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="article_title">Judul Artikel</string>
    <string name="article_content">Isi Artikel…</string>
    <string name="save">Simpan</string>
    <string name="update">Perbarui</string>
    <string name="add_article">Buat Artikel Baru</string>
    <string name="update_article">Perbarui Artikel</string>
    <string name="save_please_wait">Mohon tunggu, kami sedang melakukan proses penyimpanan artikel baru…</string>
    <string name="update_please_wait">Mohon tunggu, kami sedang melakukan proses perubahan artikel terkini…</string>
    <string name="retry">Coba Lagi</string>
    <string name="cancel">Batalkan</string>
    <string name="save_success">Berhasil menyimpan artikel baru!</string>
    <string name="title_must_fill">Judul Artikel tidak boleh kosong!</string>
    <string name="content_must_fill">Isi Artikel wajib terisi!</string>
    <string name="sure">Yakin?</string>
    <string name="delete_article_message">"Yakin Anda ingin menghapus artikel "</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="delete_success_message">Berhasil menghapus artikel!</string>
    <string name="update_error">Terjadi kesalahan saat memuat data! Kemungkinan artikel ini telah dihapus.</string>
    <string name="update_success">Berhasil memperbarui artikel!</string>
    <string name="kajian_poster">Gambar Poster Kajian</string>
    <string name="select_image">Pilih Gambar…</string>
    <string name="example_path">C:\\Program Files\\Adobe\\Adobe Photoshop 7.0\\Photoshop.exe</string>
    <string name="category">Kategori:</string>
    <string name="kajian_title">Judul Kajian</string>
    <string name="kajian_address">Alamat</string>
    <string name="mosque">Masjid:</string>
    <string name="youtube_link">URL YouTube…</string>
    <string name="mosque_null">0</string>
    <string name="mosque_name_null">- Silakan tentukan masjidnya -</string>
    <string name="choose">Pilih…</string>
    <string name="address">Alamat</string>
    <string name="next">Lanjut</string>
    <string name="search">Cari</string>
    <string name="choose_mosque">Pilih Masjid</string>
    <string name="search_mosque">Cari masjid…</string>
    <string name="mosque_note">Catatan: Masjid yang muncul disini hanyalah masjid yang sudah didaftarkan oleh ShoumHome!</string>
    <string name="back">Kembali</string>
    <string name="kajian_address_empty">Alamat wajib diisi!</string>
    <string name="kajian_yt_link_empty">URL Youtube wajib diisi!</string>
    <string name="kajian_title_empty">Judul Kajian wajib diisi!</string>
    <string name="kajian_mosque_empty">Silakan pilih masjid yang dijadikan patokan lokasi kajian atau sumber informasi kajian!</string>
    <string name="kajian_desc_empty">Deskripsi Kajian wajib diisi!</string>
    <string name="date_due">Tanggal Pelaksanaan</string>
    <string name="time_due">Dilaksanakan pada jam</string>
    <string name="choose_time_due">Tentukan Waktu Pelaksanaan</string>
    <string name="choose_date_due">Tentukan Tanggal Pelaksanaan</string>
    <string name="kajian_due_empty">Mohon tentukan tanggal pelaksanaan dan waktu pelaksanaan!</string>
    <string name="add_kajian_success">Berhasil menyimpan kajian terbaru!</string>
    <string name="file_permission_denied">Izin akses berkas ditolak! Mohon berikan izin akses membaca berkas eksternal untuk memilih gambar yang akan diunggah!</string>
    <string name="delete_kajian_message">Yakin ingin menghapus kajian berjudul</string>
    <string name="delete_kajian_success_message">Berhasil menghapus kajian!</string>
    <string-array name="kajian_category_entries">
        <item>Di Tempat</item>
        <item>Video</item>
        <item>Siaran Langsung/Live Streaming</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_mosque">MASJID</string>
    <string name="add_mosque">Tambah Masjid</string>
    <string name="choose_action_mosque">Pilih aksi yang akan Anda lakukan untuk masjid ini.</string>
    <string name="view_on_maps">Lihat di Maps</string>
    <string name="progress_add_mosque">"Mohon menunggu, kami sedang mendaftarkan masjid baru: "</string>
    <string name="add_mosque_success">"Berhasil menambahkan masjid baru ke dalam akun Anda, "</string>
    <string name="add_mosque_failed">"Gagal menambahkan masjid "</string>
    <string name="delete_mosque_confirm">"Yakin ingin menghapus masjid "</string>
    <string name="update_kajian_success">Modifikasi kajian sukses!</string>
    <string name="delete_mosque_success">"Berhasil menghapus masjid "</string>
    <string name="delete_mosque_failed">"Gagal menghapus masjid "</string>
    <string name="welcome">"Selamat datang di ShoumHome, "</string>
    <string name="wrong_username_password">Username/Password salah!</string>
    <string name="empty_username_password">Mohon lengkapi kolom Username dan Password di atas!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="theme_title">Tema</string>
    <string name="appearance_header">Tampilan</string>
    <string name="account_header">Akun</string>
    <string name="logout_confirm">Apakah Anda yakin ingin keluar dari ShoumHome! Ustadz?</string>
    <string name="goodbye">Terimakasih, Anda telah berhasil keluar dari ShoumHome!</string>
    <string name="settings">Setelan</string>
    <string name="about">Tentang</string>
    <string name="update_kajian">Perbarui Kajian</string>
    <string name="old_password">Password Lama…</string>
    <string name="new_password">Password Baru…</string>
    <string name="confirm_password">Konfirmasi Password Baru…</string>
    <string name="change">Ubah</string>
    <string name="change_password">Ubah Password</string>
    <string name="new_password_not_meet_minimum">Password baru minimal berisi 6 karakter atau lebih!</string>
    <string name="confirm_password_not_meet_minimum">Minimal 6 karakter!</string>
    <string name="confirm_password_not_same">Password disini harus disamakan dengan kolom diatas!</string>
    <string name="success_change_pass">Berhasil mengganti password!</string>
    <string name="failed_change_pass">"Gagal mengganti password! Alasan: "</string>
    <string name="wrong_old_pass">Password salah!</string>
    <string name="name">Nama Lengkap</string>
    <string name="phone">Nomor Telepon</string>
    <string name="email">Alamat Surel</string>
    <string name="male">Laki-Laki</string>
    <string name="female">Perempuan</string>
    <string name="leader">KETUA</string>
    <string name="member_one">ANGGOTA 1</string>
    <string name="member_two">ANGGOTA 2</string>
    <string name="require_to_fill">Kolom ini wajib diisi!</string>
    <string name="invalid_email">Email tidak sah! Contoh email adalah john.smith@example.com</string>
    <string name="success_modify_identity">Berhasil mengubah identitas!</string>
    <string name="failed_modify_identity">"Gagal mengganti identitas! Alasan: "</string>
    <string name="logout">Keluar dari ShoumHome!</string>
    <string name="change_identity">Ubah Identitas Diri</string>
    <string name="example_about_name">John Smith</string>
    <string name="example_about_nim">12.11.1234</string>
    <string name="label_about_grade">Kelas</string>
    <string name="example_about_grade">AB 1234 C</string>
    <string name="label_about_year_registered">Tahun Angkatan</string>
    <string name="example_about_year_registered">2013</string>
    <string name="label_about_github">GitHub Username</string>
    <string name="example_about_github">admin123</string>
    <string name="label_about_email">Email</string>
    <string name="example_about_email">john.smith@example.com</string>
    <string name="label_about_address">Alamat</string>
    <string name="example_about_address">1234 William Street, CA, United States 12204</string>
    <string name="visit_my_github">Kunjungi Profil GitHub Saya</string>
    <string name="github">GitHub</string>
    <string name="please_wait">Mohon menunggu…</string>
    <string name="failed_load_data">Maaf, kami mengalami kegagalan dalam mengambil informasi Anda!</string>
</resources>
