<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.shoumhome.android.fragments.DevelopersFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civPhoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:elevation="1dp"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/example_about_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?android:textColorPrimary"/>

        <TextView
            android:id="@+id/tvNim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/example_about_nim" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/label_about_grade" />

                <TextView
                    android:id="@+id/tvGrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/example_about_grade" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/label_about_year_registered" />

                <TextView
                    android:id="@+id/tvYearRegistered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/example_about_year_registered" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/label_about_github" />

                <TextView
                    android:id="@+id/tvGitHub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/example_about_github" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/label_about_email" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:autoLink="email"
                    android:textColorLink="?android:textColorPrimary"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/example_about_email" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/label_about_address" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/example_about_address" />

            </TableRow>

        </TableLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVisit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="@string/visit_my_github" />

    </LinearLayout>

</ScrollView>