<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_data_kajian"
    android:layout_width="match_parent"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_kajian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_kajian"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/icon"
                android:contentDescription="@string/icon_kajian" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_kajian"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/example_article_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_text_less"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/example_text" />

            <TextView
                android:id="@+id/tv_due"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tv_text_less"
                android:text="@string/example_tanggal" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>