<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUpdateArticleActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilArticleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBar">

        <EditText
            android:id="@+id/edtArticleTitle"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/article_title"
            android:inputType="text"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilArticleTitle">

        <EditText
            android:id="@+id/edtArticleContent"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/article_content"
            android:inputType="textCapSentences|textMultiLine"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/progressMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha=".8"
        android:padding="16dp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvProgressMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save_please_wait"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@id/progressBar" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/errorMessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha=".8"
        android:padding="16dp"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imgWarning"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/warning"
                android:src="@drawable/ic_baseline_warning_24" />

            <TextView
                android:id="@+id/tvErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/example_error_message"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_below="@id/imgWarning" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_below="@id/tvErrorMessage"
                style="?android:attr/buttonBarStyle"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancelError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btnRetryError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/retry" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>